// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#232323",
                "borderBottomColor": "#333333",
                "flex": 1,
                "shadowColor": "#333333",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "#D3D8E8",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Intro
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        forwardedRef={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#232323",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#232323",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "#232323",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "width": "100%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#D3D8E8",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                Object {
                                  "marginTop": 100,
                                },
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#D3D8E8",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#D3D8E8",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "75%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            activeOpacity={0.6}
                            delayPressIn={50}
                            disabled={false}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#8A96DC",
                                    "borderBottomColor": "#8A96DC",
                                    "borderLeftColor": "#8A96DC",
                                    "borderRightColor": "#8A96DC",
                                    "borderTopColor": "#8A96DC",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Image
                                source={
                                  Object {
                                    "createTransformer": [Function],
                                  }
                                }
                                style={
                                  Object {
                                    "height": 24,
                                    "left": 12,
                                    "position": "absolute",
                                    "width": 24,
                                  }
                                }
                              />
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Sign In
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 8,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.6}
                            delayPressIn={50}
                            onPress={[Function]}
                            testID="btn-navigate"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#8A96DC",
                                    "borderBottomColor": "#8A96DC",
                                    "borderLeftColor": "#8A96DC",
                                    "borderRightColor": "#8A96DC",
                                    "borderTopColor": "#8A96DC",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Navigate
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 8,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.6}
                            delayPressIn={50}
                            onPress={[Function]}
                            testID="btn-theme"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#8A96DC",
                                    "borderBottomColor": "#8A96DC",
                                    "borderLeftColor": "#8A96DC",
                                    "borderRightColor": "#8A96DC",
                                    "borderTopColor": "#8A96DC",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Change Theme
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#EDEDED",
                "flex": 1,
                "shadowColor": "#EDEDED",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "#000000",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Intro
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        forwardedRef={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "#FFFFFF",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "width": "100%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#000000",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                Object {
                                  "marginTop": 100,
                                },
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#000000",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#000000",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "75%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            activeOpacity={0.6}
                            delayPressIn={50}
                            disabled={false}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#393D7A",
                                    "borderBottomColor": "#393D7A",
                                    "borderLeftColor": "#393D7A",
                                    "borderRightColor": "#393D7A",
                                    "borderTopColor": "#393D7A",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Image
                                source={
                                  Object {
                                    "createTransformer": [Function],
                                  }
                                }
                                style={
                                  Object {
                                    "height": 24,
                                    "left": 12,
                                    "position": "absolute",
                                    "width": 24,
                                  }
                                }
                              />
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Sign In
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 8,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.6}
                            delayPressIn={50}
                            onPress={[Function]}
                            testID="btn-navigate"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#393D7A",
                                    "borderBottomColor": "#393D7A",
                                    "borderLeftColor": "#393D7A",
                                    "borderRightColor": "#393D7A",
                                    "borderTopColor": "#393D7A",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Navigate
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 8,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.6}
                            delayPressIn={50}
                            onPress={[Function]}
                            testID="btn-theme"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#393D7A",
                                    "borderBottomColor": "#393D7A",
                                    "borderLeftColor": "#393D7A",
                                    "borderRightColor": "#393D7A",
                                    "borderTopColor": "#393D7A",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Change Theme
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
